# obsidian-typst

./: .editorconfig  .eslintrc  .gitignore  CHANGELOG.md  Cargo.toml  README.md  compiler.worker.ts  esbuild.config.mjs  main.ts  manifest.json  package-lock.json  package.json  styles.css  types.d.ts  typst-canvas-element.ts  versions.json
.cargo/: config
.github/: FUNDING.yml
.github/workflows/: main.yml
compiler/: Cargo.toml
compiler/src/: diagnostic.rs  file_entry.rs  lib.rs  paths.rs  render.rs  world.rs
src/: compiler.worker.ts  fonts.rs  lib.rs  main.ts  paths.rs  types.d.ts  typst-canvas-element.ts  typst-render-element.ts
src/settings/: folder-suggest.ts
