[package]
name = "obsidian-typst"
version = "0.4.2"
authors = ["fenjalien"]
edition = "2021"
description = "Renders `typst` code blocks to images with Typst."
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Everything to do with Typst
typst = { git = "https://github.com/typst/typst.git", tag = "v0.4.0" }
typst-library = { git = "https://github.com/typst/typst.git", tag = "v0.4.0" }
comemo = "0.3"

once_cell = "1.17.1"
siphasher = "0.3.10"
elsa = "1.8.0"


# Everything to do with wasm
wasm-bindgen = "^0.2"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde-wasm-bindgen = "^0.5"
web-sys = { version = "^0.3", features = ["console", "Window", "FontData", "Blob", "ImageData"] }


# [patch.crates-io]
# web-sys = { git = "https://github.com/fenjalien/wasm-bindgen.git" }
# js-sys = { git = "https://github.com/fenjalien/wasm-bindgen.git" }
# wasm-bindgen-futures = { git = "https://github.com/fenjalien/wasm-bindgen.git" }
# wasm-bindgen = { git = "https://github.com/fenjalien/wasm-bindgen.git" }

# [profile.release]
# debug = true
