[package]
name = "obsidian-typst"
version = "0.4.2"
authors = ["fenjalien"]
edition = "2021"
description = "Renders `typst` code blocks to images with Typst."
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Everything to do with Typst
typst = { git = "https://github.com/typst/typst.git", tag = "v0.6.0" }
typst-library = { git = "https://github.com/typst/typst.git", tag = "v0.6.0" }
comemo = "0.3"
siphasher = "0.3.10"
elsa = "1.8.0"


# Everything to do with wasm
wasm-bindgen = "^0.2"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde-wasm-bindgen = "^0.5"
web-sys = { version = "^0.3", features = ["console", "Window", "FontData", "Blob", "ImageData"] }
