[package]
name = "obsidian-typst"
version = "0.10.0"
authors = ["fenjalien"]
edition = "2021"
description = "Renders `typst` code blocks to images with Typst."
readme = "README.md"
rust-version = "1.72.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Everything to do with Typst
typst = "0.11"
typst-render = "0.11"
typst-svg = "0.11"
typst-assets = {version = "0.11", features = ["fonts"]}
comemo = "0.4"


# Everything to do with wasm
wasm-bindgen = "^0.2"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "^0.6"
web-sys = { version = "^0.3", features = [
    "console",
    "Window",
    "FontData",
    "Blob",
    "ImageData",
] }
console_error_panic_hook = "0.1.7"

# Image handling
fast_image_resize = "2.7.3"

ariadne = "0.4.0"
chrono = "0.4.30"
